src/app-components/WorkflowNode/workflow-node.css
.workflow-node {
  --icon-color: var(---foreground-icon-warning);
  --border-color: var(--border-base);

  position: relative;

  &:focus {
    outline: none;
  }

  &[data-focus-within] {
    .workflow-node-toolbar {
      opacity: 1;
    }
  }

  &[data-hovered] {
    .workflow-node-toolbar {
      opacity: 1;
    }
  }

  &[data-hovered].default {
    .workflow-node-card {
      border-color: var(--border-base-hover);
    }
  }
}

.workflow-node.inactive {
  --icon-color: var(--foreground-icon-base-strong);

  .workflow-node-card {
    background-color: var(--background-base-disabled);

    svg {
      filter: grayscale(100%) opacity(50%);
    }
  }
}

.workflow-node.success {
  --icon-color: var(--foreground-icon-success);
  --border-color: var(--border-success);
}

.workflow-node.warning {
  --icon-color: var(--foreground-icon-warning);
  --border-color: var(--border-warning);
}

.workflow-node.error {
  --icon-color: var(--foreground-icon-danger);
  --border-color: var(--border-danger);
}

.workflow-node.pinned {
  --icon-color: var(--foreground-icon-base-strong);
  --border-color: var(--border-base-selected);
}

.workflow-node-status-icon {
  padding: 0.125rem;
  background-color: var(--background-base);
  color: var(--icon-color);
  position: absolute;
  left: -0.75rem;
  top: -0.75rem;

  & > svg {
    width: 1.25rem;
    height: 1.25rem;
  }
}

.workflow-node-toolbar {
  position: absolute;
  right: 0;
  top: -2rem;
  border: 1px solid var(--border-base-muted);
  border-radius: 6px;
  opacity: 0;
  overflow: hidden;
  transition: opacity 150ms ease-out;

  &:has(.workflow-node-menu-trigger[aria-expanded="true"]) {
    opacity: 1;
  }

  & > button {
    width: 1.4375rem;
    height: 1.4375rem;
    border-right: 1px solid var(--border-base-muted);
    border-radius: 0;

    &[data-focus-visible] {
      outline: 1px solid var(--focus-ring);
      outline-offset: -0.125rem;
      border-radius: 4px;
    }
  }

  & > button:last-child {
    border-right: none;
  }
}

.workflow-node-card {
  width: 12.5rem;
  padding: 1rem;
  display: flex;
  align-items: center;
  gap: 0.625rem;
  background-color: var(--background-base);
  border: 1px solid var(--border-color);
  border-radius: 8px;
  cursor: pointer;
  transition: border-color 150ms ease-out;
}

.workflow-node-icon {
  width: 2rem;
  height: 2rem;
  flex-shrink: 0;
}

.workflow-node-title {
  font-size: var(--font-size-md);
  color: var(--foreground-text-base-strong);
  font-weight: 500;
}

.workflow-node-description {
  font-size: var(--font-size-xs);
  font-family: var(--mono-font-family);
  line-height: 1;
  color: var(--foreground-text-base-muted);
}

